--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --timeout 10000 --exit tests/test.js",
     "start": "node app.js"
   },
+  "type": "module",
   "author": "Thomas Mertens",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.1",
-    "chai": "^4.3.6",
+    "chai": "^4.3.7",
     "chai-http": "^4.3.0",
     "express": "^4.18.2",
     "mocha": "^10.1.0",
