--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.1",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mocha": "^10.1.0",
     "mongoose": "^6.7.0"
